# internal/adapters/controllers/criptoMonedasController.go
@@ -126,3 +126,77 @@ func (c CryptoController) SaveMonedaConCotizacion(ctx *gin.Context) {
 	}
 	ctx.JSON(http.StatusOK, gin.H{"message": "Moneda registrada correctamente"})
 }
+
+// DownloadCSV godoc
+// @Summary      Generar CSV sincrónico
+// @Description  Genera un archivo CSV con datos de criptomonedas de forma sincrónica
+// @Tags         csv
+// @Produce      text/csv
+// @Success      200  {file}  file
+// @Failure      500  {string}  string "Error al generar el archivo CSV"
+// @Router       /csv/sync/generate [get]
+func (c *CryptoController) DownloadCSV(ctx *gin.Context) {
+	data, err := c.serv.GenerateCSV()
+	if err != nil {
+		ctx.JSON(http.StatusInternalServerError, gin.H{"error": "Error al generar el archivo CSV"})
+		return
+	}
+
+	ctx.Header("Content-Description", "File Transfer")
+	ctx.Header("Content-Disposition", "attachment; filename=monedas.csv")
+	ctx.Header("Content-Type", "text/csv")
+	ctx.Writer.Write(data)
+}
+
+// StartCSVTask godoc
+// @Summary      Iniciar tarea asíncrona de generación de CSV
+// @Description  Inicia una tarea para generar un archivo CSV con datos de criptomonedas de forma asíncrona
+// @Tags         csv
+// @Produce      json
+// @Success      200  {string}  string "task_id"
+// @Router       /csv/async/generate [post]
+func (c *CryptoController) StartCSVTask(ctx *gin.Context) {
+	taskID := c.serv.StartCSVTask()
+	ctx.JSON(http.StatusOK, gin.H{"task_id": taskID})
+}
+
+// GetTaskStatus godoc
+// @Summary      Obtener el estado de una tarea de generación de CSV
+// @Description  Obtiene el estado de una tarea asíncrona de generación de CSV mediante el ID de la tarea
+// @Tags         csv
+// @Produce      json
+// @Param        task_id  path      string  true  "ID de la tarea"
+// @Success      200  {string}  string "status"
+// @Failure      404  {string}  string "Tarea no encontrada"
+// @Router       /csv/async/status/{task_id} [get]
+func (c *CryptoController) GetTaskStatus(ctx *gin.Context) {
+	taskID := ctx.Param("task_id")
+	status, exists := c.serv.GetTaskStatus(taskID)
+	if !exists {
+		ctx.JSON(http.StatusNotFound, gin.H{"error": "Tarea no encontrada"})
+		return
+	}
+	ctx.JSON(http.StatusOK, gin.H{"status": status.Status})
+}
+// DownloadCSVFile godoc
+// @Summary      Descargar archivo CSV generado
+// @Description  Descarga el archivo CSV generado asíncronamente mediante el ID de la tarea
+// @Tags         csv
+// @Produce      text/csv
+// @Param        task_id  path      string  true  "ID de la tarea"
+// @Success      200  {file}  file
+// @Failure      404  {string}  string "Error al descargar el archivo CSV"
+// @Router       /csv/async/download/{task_id} [get]
+func (c *CryptoController) DownloadCSVFile(ctx *gin.Context) {
+	taskID := ctx.Param("task_id")
+	data, err := c.serv.GetCSVFile(taskID)
+	if err != nil {
+		ctx.JSON(http.StatusNotFound, gin.H{"error": err.Error()})
+		return
+	}
+
+	ctx.Header("Content-Description", "File Transfer")
+	ctx.Header("Content-Disposition", "attachment; filename=monedas.csv")
+	ctx.Header("Content-Type", "text/csv")
+	ctx.Writer.Write(data)
+}
